[package]
name = "iroh-mdns-address-lookup"
version = "0.3.0"
edition = "2024"
readme = "README.md"
description = "mDNS-based address lookup for iroh"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-address-lookups"
homepage = "https://github.com/n0-computer/iroh-address-lookups"
documentation = "https://docs.rs/iroh-mdns-address-lookup"
keywords = ["iroh", "mdns", "swarm-discovery", "address-lookup"]
categories = ["network-programming"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.91"

[lints]
workspace = true

[dependencies]
data-encoding = "2.10"
derive_more = { version = "2.1", features = ["debug"] }
futures-util = "0.3"
iroh = "1.0.0"
iroh-base = { version = "1.0.0", default-features = false, features = ["key"] }
n0-error = "1.0.0"
n0-future = "0.3.2"
n0-watcher = "1"
swarm-discovery = "0.6"
tokio = { version = "1.49", features = ["rt", "sync"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = "0.1.44"

[dev-dependencies]
n0-tracing-test = "0.3"
rand = "0.10"
rand_chacha = "0.10"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "iroh_docsrs"]
